# slambook_practice

ch1_hello/: CMakeLists.txt  ch1_exercise.md  hello.cpp  libhello.cpp
ch2_rigid_body_motion/: CMakeLists.txt  ch2_exercise.cpp  ch2_exercise.md  coordinate_transfrom.cpp  use_eigen.cpp  use_geometry.cpp  visualize_geometry.cpp  visualize_trajectory.cpp
ch3_Lie_algebra/: CMakeLists.txt  Trajectory_dif.cpp  ch3_exercise.cpp  practice_exp_log_map.cpp  useSophus.cpp
ch4_camera_image/: CMakeLists.txt
ch4_camera_image/3dvision/: CMakeLists.txt  rgbd.cpp  stereo.cpp
ch4_camera_image/imagebasics/: CMakeLists.txt  imagebasics.cpp  undistored.cpp
ch5_nonlinear_optimization/: CMakeLists.txt  ceres_curve_fitting.cpp  g2o_curve_fitting.cpp  gauss_newton.cpp
ch6_visiual_odometry/: CMakeLists.txt  orb_cv.cpp  pose_estimated_2d2d.cpp  triangulation.cpp
ch6_visiual_odometry/include/: feature_matches.hpp  pose_estimated.hpp
ch6_visiual_odometry/src/: feature_matches.cpp  pose_estimated.cpp
